Fix Class.newInstance() deprecation warnings.